Добалвение билда проекта